# cockpit-ovirt

./: .eslintrc  .gitignore  LICENSE  Makefile.am  README.md  TODO.txt  autogen.sh  automation.yaml  cockpit-ovirt.spec.in  configure.ac  constants.js  engineLogin.js  enginevms.js  globaldata.js  helpers.js  hostvms.js  manifest.json  ovirt.html  ovirt.js  package.json  ping.js  test.gerrit.txt  vdsmscreen.js  vmdetail.js  webpack.config.js
dashboard/: .babelrc  .babelrc.js  .eslintrc  Makefile.am  README.md  package.json  package.json.in  webpack.config.js
dashboard/src/: app.js
dashboard/src/components/: App.js  Dashboard.js  GlusterManagement.js  HeSetupFooter.js.in  HostedEngine.js  HostedEngineSetup.js  Management.js
dashboard/src/components/HostedEngineSetup/: HE-Wizard-Engine.js  HE-Wizard-Execution.js  HE-Wizard-Network.js  HE-Wizard-Preview.js  HE-Wizard-Storage.js  HE-Wizard-VM.js  HeSetup.js  HeSetupWizard.js  MultiRowTextBox.js  UnmaskablePassword.js  Validation.js  constants.js
dashboard/src/components/HostedEngineSetup/AnsiblePhaseExecution/: AnsiblePhaseExecution.js  AnsiblePhaseExecutionContainer.js
dashboard/src/components/HostedEngineSetup/AnsiblePhasePreview/: AnsiblePhasePreview.js  AnsiblePhasePreviewContainer.js
dashboard/src/components/HostedEngineSetup/EngineStep/: HeWizardEngine.js  HeWizardEngineContainer.js
dashboard/src/components/HostedEngineSetup/Execution/: DeploymentSuccessPanel.js
dashboard/src/components/HostedEngineSetup/ExecutionStep/: DeploymentStatus.js  HeWizardExecution.js  HeWizardExecutionContainer.js
dashboard/src/components/HostedEngineSetup/HeSetup/: HeSetup.js  HeSetupContainer.js  HeSetupMessagePanel.js  HeSetupNoPermissionsPanel.js  HeSetupOutputPanel.js  HeSetupSuccessPanel.js  RestartButton.js
dashboard/src/components/HostedEngineSetup/HeSetup/HeSetupInput/: HeSetupInputPanel.js  HeSetupInputPanelContainer.js
dashboard/src/components/HostedEngineSetup/HeSetupWizard/: HeSetupWizard.js  HeSetupWizardContainer.js
dashboard/src/components/HostedEngineSetup/MultiRowTextBox/: InputRow.js  InputRowContainer.js  MultiRowTextBox.js  MultiRoxTextBoxContainer.js
dashboard/src/components/HostedEngineSetup/NetworkStep/: HeWizardNetwork.js  HeWizardNetworkContainer.js
dashboard/src/components/HostedEngineSetup/PreviewStep/: HeWizardPreview.js  HeWizardPreviewContainer.js
dashboard/src/components/HostedEngineSetup/ReviewStep/: ReviewItem.js  ReviewItemList.js  ReviewStep.js  ReviewStepPanel.js
dashboard/src/components/HostedEngineSetup/StorageStep/: HeWizardStorage.js  HeWizardStorageContainer.js
dashboard/src/components/HostedEngineSetup/StorageStep/iSCSI/Lun/: Lun.js  LunContainer.js
dashboard/src/components/HostedEngineSetup/StorageStep/iSCSI/Lun/LunProp/: LunProp.js
dashboard/src/components/HostedEngineSetup/StorageStep/iSCSI/LunList/: LunList.js  LunListContainer.js
dashboard/src/components/HostedEngineSetup/StorageStep/iSCSI/Portal/: Portal.js  PortalContainer.js
dashboard/src/components/HostedEngineSetup/StorageStep/iSCSI/PortalList/: PortalList.js  PortalListContainer.js
dashboard/src/components/HostedEngineSetup/StorageStep/iSCSI/TargetList/: TargetList.js  TargetListContainer.js
dashboard/src/components/HostedEngineSetup/StorageStep/iSCSI/TargetPortalGroup/: TargetPortalGroup.js  TargetPortalGroupContainer.js
dashboard/src/components/HostedEngineSetup/VmStep/: HeWizardVm.js  HeWizardVmContainer.js
dashboard/src/components/HostedEngineSetup/VmStep/HeWizardVmComponents/: CheckboxWithInfo.js
dashboard/src/components/ansible/: Ansible-Wizard-Bricks.js  Ansible-Wizard-Execution.js  Ansible-Wizard-Fqdns.js  Ansible-Wizard-Hosts.js  Ansible-Wizard-Packages.js  Ansible-Wizard-Preview.js  Ansible-Wizard-Volumes.js  AnsibleSetup.js  CreateGlusterVolume.js  ExpandCluster.js  ExpandVolume.js  constants.js
dashboard/src/components/common/: Selectbox.js  Wizard.js
dashboard/src/components/common/Wizard/: Wizard.js
dashboard/src/components/common/Wizard/MultiPartStep/: MultiPartStep.js  MultiPartStepContainer.js
dashboard/src/components/common/Wizard/SubStepTab/: SubStepTab.js  SubStepTabContainer.js
dashboard/src/components/common/Wizard/SubStepTabList/: SubStepTabList.js  SubStepTabListContainer.js
dashboard/src/components/gdeploy/: CreateGlusterVolume.js  ExpandCluster.js  Gdeploy-Wizard-Bricks.js  Gdeploy-Wizard-Execution.js  Gdeploy-Wizard-Fqdns.js  Gdeploy-Wizard-Hosts.js  Gdeploy-Wizard-Packages.js  Gdeploy-Wizard-Preview.js  Gdeploy-Wizard-Volumes.js  GdeploySetup.js  Selectbox.js  Wizard.js  constants.js  constants.js.in
dashboard/src/helpers/: AnsibleUtil.js  Dashboard.js  GdeployUtil.js  HostedEngineSetup.js  HostedEngineSetupUtil.js  HostedEngineStatus.js
dashboard/src/helpers/HostedEngineSetup/: AnsiblePhaseExecutor.js  AnsibleVarFilesGenerator.js  DefaultValueProvider.js  IscsiUtil.js  PlaybookUtil.js  PreviewGenerator.js  ReviewGenerator.js  StorageUtil.js
dashboard/src/routes/: routes.js.in
dashboard/static/: app.css  index.html  index.html.ejs  manifest.json
dashboard/static/ansible/: expandCluster.yml  hc_wizard.yml  hc_wizard_cleanup.yml  hc_wizard_example_inventory.yml
dashboard/static/gdeploy-templates/: he-common.conf  ovirt-gluster-hc.conf
dashboard/static/hostedEngineAnsibleFiles/: addHosts.yml  addStorageDomain.yml  heSetup.yml
node-dashboard/: Makefile.am  index.html  manifest.json  package.json
node-dashboard/src/: app.js
node-dashboard/src/components/: App.js
node-dashboard/static/: index.html
ovirt-uiplugin/: Makefile.am  README.cockpit  cockpit.json
ovirt-uiplugin/cockpit-resources/: index.html  noCockpit.html
vdsm/: .eslintrc  GenerateI18N.js  Makefile.am  README.md  package.json  package.json.in  vdsm  vdsmJsonRPCCli.py  webpack.config.js
vdsm/po/: de.po  fr.po
vdsm/src/: constants.js  engineLogin.js  enginevms.js  helpers.js  hostvms.js  i18n.js  ovirt.js  ping.js  tests.js  vmdetail.js
vdsm/src/i18n/: i18n.src.json
vdsm/static/: app.css  ovirt.html
vdsm/static/vdsm/: vdsm  vdsmJsonRPCCli.py
vdsm/tools/: generatePo
(+44 files in other folders)
